--- a/em-eureka/src/main/resources/application.yml
+++ b/em-eureka/src/main/resources/application.yml
@@ -1,14 +1,24 @@
 spring:
   application:
-    name: eureka-server
+    name: em-eureka
+  security:
+    user:
+      name: admin
+      password: admin
 server:
-  port: 8761
+  port: 8801
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8801/eureka
     register-with-eureka: false
     fetch-registry: false
+  server:
+    # 关闭自我保护模式
+    enable-self-preservation: false
+    # 默认 60000 毫秒
+    eviction-interval-timer-in-ms: 5000
+
 management:
   endpoints:
     web:
