--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>em-eureka</module>
         <module>em-config</module>
         <module>em-admin</module>
+        <module>em-example</module>
     </modules>
 
     <!-- Spring Boot -->
@@ -30,6 +31,7 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+
     </dependencies>
 
     <!-- Spring Cloud -->
@@ -38,7 +40,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.SR2</version>
+                <version>Greenwich.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
